--- a/public/pesquisa.html
+++ b/public/pesquisa.html
@@ -14,6 +14,7 @@
   <div class="menu">
     <div class="opcoes_menu">
       <a style="text-decoration: underline #f75a5a 4px; color: black" href="pesquisa.html">Você Sabia?</a>
+      <a href="quiz.html">Quiz</a>
       <a href="index.html">JOGO</a>
     </div>
   </div>
