organização de caminhos das imagens corrigidas

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div id="div_carregando" style="display: none;">
-    <div class="carregando"><img id="img_carregador" src="/public/assets/image/carregando.gif" alt=""></div>
+    <div class="carregando"><img id="img_carregador" src="assets/image/carregando.gif" alt=""></div>
     <div class="eu_carregando"></div>
 
   </div>
