--- a/public/jogo.html
+++ b/public/jogo.html
@@ -21,7 +21,7 @@
                 <span id="span_jogador1"></span>
             </div>
           </div>
-          <div><h1 style="font-size: 70px">VS</h1></div>
+          <div><h1 style="font-size: 70px">+</h1></div>
           <div class="container" style="background-color: #f75a5a">
           
             <div class="avatar">
